[FEATURE] Add filtering for student payments by status in PaymentController and PaymentService